--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </tr>
     <tr>
       <td>Ubuntu 14.04 x86_64</td>
-      <td><a href="trusty_x64">Download</a></td>
+      <td><a href="trusty_x64.qcow2">Download</a></td>
     <tr>
       <td>Centos 6 x86_64</td>
-      <td><a href="centos6_x64">Download</a></td>
+      <td><a href="centos6_x64.qcow2">Download</a></td>
     </tr>
   </table>
 </div>
