Add support for Ubuntu 16.04
I want to play with 16.04 in some VMs, and you can too.

--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
 
   <!-- Table -->
   <table class="table">
-    <tr> 
+    <tr>
       <th>Name</th>
       <th>Link</th>
     </tr>
     <tr>
       <td>Ubuntu 14.04 x86_64</td>
       <td><a href="trusty_x64.qcow2">Download</a></td>
+    <tr>
+      <td>Ubuntu 16.04 x86_64</td>
+      <td><a href="xenial_x64.qcow2">Download</a></td>
     <tr>
       <td>Centos 6 x86_64</td>
       <td><a href="centos6_x64.qcow2">Download</a></td>
