--- a/index.html
+++ b/index.html
@@ -33,17 +33,37 @@
   <table class="table">
     <tr>
       <th>Name</th>
-      <th>Link</th>
+      <th>qcow2</th>
+      <th>tar</th>
+      <th>vhd</th>
+      <th>docker</th>
+      <th>aci</th>
+      <th>raw</th>
     </tr>
     <tr>
       <td>Ubuntu 14.04 x86_64</td>
       <td><a href="trusty_x64.qcow2">Download</a></td>
+      <td><a href="trusty_x64.tar">Download</a></td>
+      <td><a href="trusty_x64.vhd">Download</a></td>
+      <td><a href="trusty_x64.docker">Download</a></td>
+      <td><a href="trusty_x64.aci">Download</a></td>
+      <td><a href="trusty_x64.raw">Download</a></td>
     <tr>
       <td>Ubuntu 16.04 x86_64</td>
       <td><a href="xenial_x64.qcow2">Download</a></td>
+      <td><a href="xenial_x64.tar">Download</a></td>
+      <td><a href="xenial_x64.vhd">Download</a></td>
+      <td><a href="xenial_x64.docker">Download</a></td>
+      <td><a href="xenial_x64.aci">Download</a></td>
+      <td><a href="xenial_x64.raw">Download</a></td>
     <tr>
       <td>Centos 6 x86_64</td>
       <td><a href="centos6_x64.qcow2">Download</a></td>
+      <td><a href="centos6_x64.tar">Download</a></td>
+      <td><a href="centos6_x64.vhd">Download</a></td>
+      <td><a href="centos6_x64.docker">Download</a></td>
+      <td><a href="centos6_x64.aci">Download</a></td>
+      <td><a href="centos6_x64.raw">Download</a></td>
     </tr>
   </table>
 </div>
