Also build centos7 images
Centos7 Pretty Good

--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
       <td><a href="centos6_x64.aci">Download</a></td>
       <td><a href="centos6_x64.raw">Download</a></td>
     </tr>
+    <tr>
+      <td>Centos 7 x86_64</td>
+      <td><a href="centos7_x64.qcow2">Download</a></td>
+      <td><a href="centos7_x64.tar">Download</a></td>
+      <td><a href="centos7_x64.vhd">Download</a></td>
+      <td><a href="centos7_x64.docker">Download</a></td>
+      <td><a href="centos7_x64.aci">Download</a></td>
+      <td><a href="centos7_x64.raw">Download</a></td>
+    </tr>
   </table>
 </div>
   </body>
